@@ -4069,4 +4069,5 @@ define("_CONFIGURATION", "Configuration");
 define("_SYSTEMOPTIONS", "System options");
 define("_CASUAL", "Casual");
 define("_YOUCANNOTEDITTHISUSER", "You cannot access this user's information");
+define("_THEFILEAPPEARSEMPTYPERHAPSITISNOTFORMATTEDCORRECTLY", "The file appears to be empty. Perhaps it is not formatted correctly?");
 ?>
