@@ -4069,4 +4069,5 @@ define("_CONFIGURATION", "Διαμόρφωση");
 define("_SYSTEMOPTIONS", "Ρυθμ. συστήματος");
 define("_CASUAL", "Περιστασιακά");
 define("_YOUCANNOTEDITTHISUSER", "Δεν μπορείτε να προσπελάσετε τις πληροφορίες αυτού του χρήστη");
+define("_THEFILEAPPEARSEMPTYPERHAPSITISNOTFORMATTEDCORRECTLY", "Το αρχείο δείχνει να είναι κενό. Ίσως δεν έχει την κατάλληλη μορφή;");
 ?>
